--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Noto Sans';
 }
 
+html {
+    box-sizing: border-box;
+}
+
 h1 {
     margin: 4rem;
     margin-bottom: 3rem;
@@ -37,6 +41,7 @@ a:hover {
 
 .navbar {
     box-shadow: 0 3px 5px rgba(16, 16, 17, 0.3);
+    align-items: center;
 }
 
 .phover:hover {
@@ -50,6 +55,13 @@ a:hover {
 
 .footer {
     box-shadow: 3px 0 5px rgba(16, 16, 17, 0.3);
+}
+
+.footerCont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .footerCentralDiv {
@@ -109,6 +121,12 @@ li {
     background-color: #B5390E;
     border: none;
     color: white;
+}
+
+.btnDevis {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
 }
 
 .dropdowntxt:hover {
@@ -185,6 +203,7 @@ p {
     background-position:center;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    margin-bottom: -4rem;
 }
 
 .entrimage3 {
@@ -243,11 +262,6 @@ p {
     font-size: small;
     text-align: end;
 }
-
-	/* Whole html box designing */
-	html {
-		box-sizing: border-box;
-	}
 		
 	/* Box sizing depending on parent */
 	*,
@@ -267,16 +281,13 @@ p {
 	/* Card designing */
 	.cardi {
         background: #ff672b23;
-        width: 80vw;
+        width: 75%;
         border-radius: 20px;
 	}
 		
 	.containerNEW {
 		padding: 2rem;
 	}
-
-
-
 
 
 @media only screen and (max-width: 990px) {  
@@ -337,7 +348,8 @@ p {
     .entrimage2 {
         width: 100%;
         height: 29rem;
-        margin-top: 3rem;
+        margin-top: 8vh;
+        margin-bottom: -15vh;
         background-image: url(../img/tampon.jpg);
         background-size: 100%;
         image-rendering: optimizeSpeed;
@@ -357,7 +369,9 @@ p {
         background-attachment: scroll;
         background-repeat: no-repeat;
     }
-    
+    .accordion {
+        width: 75%;
+    }
 }
 
 
@@ -406,12 +420,13 @@ p {
     .entrimage2 {
         width: 100%;
         height: 30rem;
-        margin-top: 2vh;
+        margin-top: 3vh;
         background-image: url(../img/tampon.jpg);
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
         background-attachment: scroll;
+        margin-bottom: -15vh;
     }
     
     .entrimage3 {
@@ -421,26 +436,75 @@ p {
         background-image: url(../img/deux-passeports-turcs.jpg);
         background-size: 100%;
         image-rendering: optimizeSpeed;
-        background-position:center;
+        background-position: center;
         background-attachment: scroll;
     }
+    .cardi {
+        background: #ff672b23;
+        width: 100%;
+        border-radius: 20px;
+	}
+		
+	.containerNEW {
+		padding: 1rem;
+	}
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
+    .body {
+        font-size: xx-small;
+    }    
     .footer {
         border-width: 10rem;
         border-color: yellowgreen;
-        display: inline-block;
+    }
+    .navbar bg-dark navbar-expand-sm d-flex p-5 text-light footer {
+        display: block;
+    }
+    .accordion {
+        width: 85%;
     }
     .footerCentralDiv {
-        width: 33.33%;
+        width: 100%;
+        display: block;
     }
     
     .footerLeftDiv {
-        width: 10%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1rem;
+        margin-top: -1rem;
+        padding: auto;
     }
     
     .footerRightDiv {
-        width: 33.33%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: -1rem;
+    }
+    .footerCont {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .mail {
+        display: flex;
+        justify-content: center;
+    }
+    .footerInfo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .SMlogos {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
