--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ html {
     box-sizing: border-box;
 }
 
+@media (prefers-color-scheme: dark) {
+    .logoAloTrad {
+        filter: brightness(0) invert(1);
+    }
+}
+
 h1 {
     margin: 4rem;
     margin-bottom: 3rem;
@@ -26,6 +32,10 @@ a {
     color: white;
   }
 
+.aBlack {
+    color: black;
+}
+
 a:hover {
     color: #ff4000;
   }
@@ -34,14 +44,21 @@ a:hover {
     color: rgb(31, 21, 21);
 }
 
-.logo {
-    width: 16%;
-    margin-left: 1rem;
+.navbarLogo {
+    width: 170%;
+    margin-left: 1vw;
 }
 
 .navbar {
     box-shadow: 0 3px 5px rgba(16, 16, 17, 0.3);
-    align-items: center;
+}
+
+.navbarLogoDiv {
+    max-width:min-content;
+}
+
+.collapse {
+    justify-content: center;
 }
 
 .phover:hover {
@@ -77,21 +94,19 @@ a:hover {
 }
 
 .carousel {
-    width: 85%;
-    height: 85%;
-    margin: 0% auto
+    width: 75%;
+    margin: 19% auto;
 } 
 
 .carouselW {
     max-width: 50%;
-    max-height: 600px;
     margin: 2% auto;
     margin-bottom: 5rem;
     margin-top: 9.2rem;
 }
 
 .divavanttitre {
-    padding: 1rem;
+    padding: 4vh;
     margin-top: 4rem;
 }
 
@@ -101,12 +116,21 @@ img {
 }
 
 li {
-    padding-left: 20px;
+    padding-left: 2rem;
+}
+
+.collapse navbar-collapse {
+    display: flex;
+    justify-content: center;
 }
 
 .navbarbutton {
     font-family: 'noto sans';
     font-size: large;
+}
+
+.nav-item {
+    padding-top: 1rem;
 }
 
 .btn {
@@ -185,7 +209,7 @@ p {
     width: 100%;
     height: 52vh;
     margin-top: 8.5rem;
-    background-image: url(../img/aile\ cuzdani\ filtered.jpg);
+    background-image: url(../img/aile-cuzdani-filtered.jpg);
     background-size: 100%;
     image-rendering: optimizeSpeed;
     background-position:center;
@@ -203,7 +227,7 @@ p {
     background-position:center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    margin-bottom: -4rem;
+    margin-bottom: -10vh;
 }
 
 .entrimage3 {
@@ -293,13 +317,11 @@ p {
 @media only screen and (max-width: 990px) {  
     .carousel {
         width: 100%;
-        height: 100%;
         margin: 0% auto
     } 
     
     .carouselW {
         max-width: 90%;
-        max-height: 600px;
         margin: 2% auto;
     }
     
@@ -318,27 +340,10 @@ p {
         text-align: center;
     }
     
-    .infosContact {
-        max-width: 100%;
-        text-align: center;
-        padding-left: 0rem;
-        display: block;
-    }
-    
-    .ContacTextBRdiv {
-        bottom: 0;
-        text-align: center;
-        padding-bottom: 0.5rem;
-        position: inherit;
-        margin-left: 0% auto;
-        margin-right: 0% auto;
-    }
-    
     .entrimage1 {
         width: 100%;
         height: 29rem;
         margin-top: 8.5rem;
-        background-image: url(../img/aile\ cuzdani\ filtered.jpg);
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
@@ -348,9 +353,8 @@ p {
     .entrimage2 {
         width: 100%;
         height: 29rem;
-        margin-top: 8vh;
+        margin-top: 10vh;
         margin-bottom: -15vh;
-        background-image: url(../img/tampon.jpg);
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
@@ -362,7 +366,6 @@ p {
         width: 100%;
         height: 29rem;
         margin-top: 5rem;
-        background-image: url(../img/deux-passeports-turcs.jpg);
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
@@ -389,13 +392,11 @@ p {
     
     .carousel {
         width: 100%;
-        height: 100%;
         margin: 0% auto
     } 
     
     .carouselW {
         max-width: 100%;
-        max-height: 600px;
         margin: 5rem auto;
     }
     
@@ -409,35 +410,34 @@ p {
     .entrimage1 {
         width: 100%;
         height: 20rem;
-        margin-top: 8rem;
-        background-image: url(../img/aile\ cuzdani\ filtered.jpg);
+        margin-top: 10vh;
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
         background-attachment: scroll;
+        margin-bottom: -8vh;
     }
     
     .entrimage2 {
         width: 100%;
         height: 30rem;
-        margin-top: 3vh;
-        background-image: url(../img/tampon.jpg);
+        margin-top: 0vh;
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
         background-attachment: scroll;
-        margin-bottom: -15vh;
+        margin-bottom: -25vh;
     }
     
     .entrimage3 {
         width: 100%;
         height: 20rem;
-        margin-top: 2vh;
-        background-image: url(../img/deux-passeports-turcs.jpg);
+        margin-top: 5vh;
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position: center;
         background-attachment: scroll;
+        margin-bottom: -8vh;
     }
     .cardi {
         background: #ff672b23;
@@ -462,11 +462,12 @@ p {
         display: block;
     }
     .accordion {
-        width: 85%;
+        width: 95%;
     }
     .footerCentralDiv {
         width: 100%;
         display: block;
+        margin-top: -2vh;
     }
     
     .footerLeftDiv {
@@ -484,7 +485,7 @@ p {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: -1rem;
+        margin-bottom: -4vh;
     }
     .footerCont {
         display: block;
@@ -501,10 +502,15 @@ p {
         justify-content: center;
         align-items: center;
         width: 100%;
+        margin-top: -0vh;
     }
     .SMlogos {
         display: block;
         margin-left: auto;
         margin-right: auto;
+        display: none;
+    }
+    .signature {
+        font-size: x-small;
     }
 }
