--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ p {
         width: 100%;
         height: 29rem;
         margin-top: 10vh;
-        margin-bottom: -15vh;
+        margin-bottom: -8vh;
         background-size: 100%;
         image-rendering: optimizeSpeed;
         background-position:center;
@@ -418,7 +418,7 @@ p {
         image-rendering: optimizeSpeed;
         background-position:center;
         background-attachment: scroll;
-        margin-bottom: -25vh;
+        margin-bottom: -15vw;
     }
     
     .entrimage3 {
@@ -503,5 +503,8 @@ p {
     }
     .signature {
         font-size: x-small;
+    }
+    .entrimage2 {
+        margin-bottom: -30vw;
     }
 }
