--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ a:hover {
     right: 2rem;
 }
 
+.flagGB {
+    margin-left: -6px;
+}
+
 .footer {
     box-shadow: 3px 0 5px rgba(16, 16, 17, 0.507);
 }
